--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sen&display=swap');
+body{
+  font-family: 'Sen', sans-serif;
+}
+
 .App {
   text-align: center;
 }
@@ -35,4 +41,8 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.site-page-header {
+  border: 1px solid rgb(235, 237, 240);
 }
